# py_gitlab_tool

./: .gitignore  README.md  env.example  main.py  plan.md  pyproject.toml
src/: __init__.py
src/api/: auth.py  gitlab.py
src/auth/: __init__.py  auth.py
src/models/: __init__.py  gitlab.py  user.py
src/services/: gitlab_service.py
src/static/css/: style.css
src/static/js/: index.js  login.js  main.js
src/templates/: base.html  index.html  login.html
